--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.segi.log</groupId>
-    <artifactId>big-log</artifactId>
+    <groupId>com.yr.data</groupId>
+    <artifactId>big-well</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
