--- a/kafka-connect-kudu/pom.xml
+++ b/kafka-connect-kudu/pom.xml
@@ -106,6 +106,12 @@
             <artifactId>kafka-clients</artifactId>
             <version>${kafka.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.23</version>
+        </dependency>
     </dependencies>
 
 
