--- a/kafka-connect-kudu/pom.xml
+++ b/kafka-connect-kudu/pom.xml
@@ -41,7 +41,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.yr.kudu.Example</mainClass>
+                                    <mainClass>kudu.Example</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
