解决json key大小写问题

--- a/kafka-connect-kudu/pom.xml
+++ b/kafka-connect-kudu/pom.xml
@@ -113,6 +113,14 @@
             <version>13.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
+
+
     </dependencies>
 
 
