增加debezium依赖(测试用)

--- a/kafka-connect-kudu/pom.xml
+++ b/kafka-connect-kudu/pom.xml
@@ -121,6 +121,20 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>io.debezium</groupId>
+            <artifactId>debezium-api</artifactId>
+            <version>${version.debezium-api}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.debezium</groupId>
+            <artifactId>debezium-embedded</artifactId>
+            <version>${version.debezium}</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 
