新增日志采集模块

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>log-streams</module>
         <module>kafka-connect-kudu</module>
+        <module>log-collection</module>
     </modules>
 
     <properties>
